Tests for isAccessUserOnly0 native
- includes tests for isAccessUserOnly0 in Java8 and Java9
- expanded test infra to have src_90_current and src_90_latest files for different JCL versions in Java 9

Signed-off-by: Theresa Mammarella <Theresa.T.Mammarella@ibm.com>